--- a/_extensions/rldm25_vmac/_extension.yml
+++ b/_extensions/rldm25_vmac/_extension.yml
@@ -1,19 +1,17 @@
-title: Rldm25_vmac
-author: Tu Nombre
+title: RLDM Template
+author: Francisco Garre Frutos
 version: 1.0.0
 quarto-required: ">=1.6.0"
 contributes:
   formats:
+    common:
+      csl: apa.csl
+      number-sections: true
     pdf:
       documentclass: article
-      include-in-header: |
-        \usepackage{lmodern} % Mejora el soporte de fuentes
-        \usepackage[T1]{fontenc} % Codificación adecuada para negritas y fuentes modernas
-        \renewcommand{\ttdefault}{cmtt} % Monospace adecuada para texttt
-        \usepackage{amsmath} % Mejora matemáticas
-        \usepackage{titlesec} % Control avanzado de secciones
-        \titleformat{\section}{\large\bfseries}{\thesection}{1em}{} % Negritas para secciones
+      include-in-header: header.tex
       template: template.tex
-      latex-engine: xelatex
       format-resources:
         - rldm25.sty
+    docx:
+      reference-doc: reference.docx
